Utworzono za pomocą Colaboratory

--- a/uczenie_maszynowe.ipynb
+++ b/uczenie_maszynowe.ipynb
@@ -6,7 +6,7 @@
       "name": "uczenie_maszynowe.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfTd3D2u+0lYjW6HNyHvst",
+      "authorship_tag": "ABX9TyNZ422FSLpyGlgirXj/I+eK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,34 +30,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "Ci-D-wuAWSrN"
+        "id": "Ci-D-wuAWSrN",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "37d96fd8-32b2-478f-8d2d-6564d7046578"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.0.2'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
-        ""
+        "import sklearn\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "sklearn.__version__"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print('Hello')"
+        "data = {\n",
+        "    'size': ['XL', 'L', 'M', 'L', 'M'],\n",
+        "    'color': ['red', 'green', 'blue', 'green', 'red'],\n",
+        "    'gender': ['female', 'male', 'male', 'female', 'female'],\n",
+        "    'price': [199.0, 89.0, 99.0, 129.0, 79.0],\n",
+        "    'weight': [500, 450, 300, 380, 410],\n",
+        "    'bought': ['yes', 'no', 'yes', 'no', 'yes']\n",
+        "}\n",
+        "\n",
+        "df_row =pd.DataFrame(data)\n",
+        "\n",
+        "df  = df_row.copy()\n",
+        "\n",
+        "for col in ['size', 'color', 'gender', 'bought']:\n",
+        "  df[col] = df[col].astype('category')\n",
+        "df['weight'] = df['weight'].astype('float')\n",
+        "df.info()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JzBAgOeKWrmX",
-        "outputId": "e60a26db-e2c6-4f05-c2a2-f5bdfeb253b2"
+        "outputId": "4988ea10-e188-4936-f147-be75d709041a"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello\n"
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 5 entries, 0 to 4\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column  Non-Null Count  Dtype   \n",
+            "---  ------  --------------  -----   \n",
+            " 0   size    5 non-null      category\n",
+            " 1   color   5 non-null      category\n",
+            " 2   gender  5 non-null      category\n",
+            " 3   price   5 non-null      float64 \n",
+            " 4   weight  5 non-null      float64 \n",
+            " 5   bought  5 non-null      category\n",
+            "dtypes: category(4), float64(2)\n",
+            "memory usage: 740.0 bytes\n"
           ]
         }
       ]
