--- a/uczenie_maszynowe.ipynb
+++ b/uczenie_maszynowe.ipynb
@@ -6,7 +6,7 @@
       "name": "uczenie_maszynowe.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZ422FSLpyGlgirXj/I+eK",
+      "authorship_tag": "ABX9TyPBUrVWVqKeOz0jrlAN8gZE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,38 +77,236 @@
         "\n",
         "df  = df_row.copy()\n",
         "\n",
-        "for col in ['size', 'color', 'gender', 'bought']:\n",
+        "\"\"\"for col in ['size', 'color', 'gender', 'bought']:\n",
         "  df[col] = df[col].astype('category')\n",
+        "\n",
         "df['weight'] = df['weight'].astype('float')\n",
-        "df.info()"
+        "df.describe(include=['category']).T\n",
+        "\"\"\"\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "\n",
+        "\n",
+        "df['bought'] =le.fit_transform(df['bought'])\n",
+        "df=pd.get_dummies(df, drop_first=True)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JzBAgOeKWrmX",
-        "outputId": "4988ea10-e188-4936-f147-be75d709041a"
+        "id": "JzBAgOeKWrmX"
       },
-      "execution_count": 10,
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "scale = StandardScaler()\n",
+        "df[['price', 'weight']]=   scale.fit_transform(df[['price' , 'weight']])\n",
+        "\n",
+        "df"
+      ],
+      "metadata": {
+        "id": "Aev1EnG94M9q",
+        "outputId": "fb2e8811-f9f3-4b88-c601-c050ccfa4bdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 5 entries, 0 to 4\n",
-            "Data columns (total 6 columns):\n",
-            " #   Column  Non-Null Count  Dtype   \n",
-            "---  ------  --------------  -----   \n",
-            " 0   size    5 non-null      category\n",
-            " 1   color   5 non-null      category\n",
-            " 2   gender  5 non-null      category\n",
-            " 3   price   5 non-null      float64 \n",
-            " 4   weight  5 non-null      float64 \n",
-            " 5   bought  5 non-null      category\n",
-            "dtypes: category(4), float64(2)\n",
-            "memory usage: 740.0 bytes\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      price    weight  bought  size_M  size_XL  color_green  color_red  \\\n",
+              "0  1.845062  1.366002       1       0        1            0          1   \n",
+              "1 -0.691898  0.623610       0       0        0            1          0   \n",
+              "2 -0.461266 -1.603567       1       1        0            0          0   \n",
+              "3  0.230633 -0.415740       0       0        0            1          0   \n",
+              "4 -0.922531  0.029696       1       1        0            0          1   \n",
+              "\n",
+              "   gender_male  \n",
+              "0            0  \n",
+              "1            1  \n",
+              "2            1  \n",
+              "3            0  \n",
+              "4            0  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-0e510dcd-fb9d-4156-a85c-55234c26ee25\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>price</th>\n",
+              "      <th>weight</th>\n",
+              "      <th>bought</th>\n",
+              "      <th>size_M</th>\n",
+              "      <th>size_XL</th>\n",
+              "      <th>color_green</th>\n",
+              "      <th>color_red</th>\n",
+              "      <th>gender_male</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.845062</td>\n",
+              "      <td>1.366002</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.691898</td>\n",
+              "      <td>0.623610</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-0.461266</td>\n",
+              "      <td>-1.603567</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.230633</td>\n",
+              "      <td>-0.415740</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-0.922531</td>\n",
+              "      <td>0.029696</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0e510dcd-fb9d-4156-a85c-55234c26ee25')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-0e510dcd-fb9d-4156-a85c-55234c26ee25 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-0e510dcd-fb9d-4156-a85c-55234c26ee25');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     },
