--- a/uczenie_maszynowe.ipynb
+++ b/uczenie_maszynowe.ipynb
@@ -6,7 +6,7 @@
       "name": "uczenie_maszynowe.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBUrVWVqKeOz0jrlAN8gZE",
+      "authorship_tag": "ABX9TyPau8v2aHA+BvmYPisys3cJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,6 +307,254 @@
           },
           "metadata": {},
           "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data1 = {\n",
+        "    'size': ['XL', 'L', 'M', np.nan, 'M', 'M'],\n",
+        "    'color': ['red', 'green', 'blue', 'green', 'red', 'green'],\n",
+        "    'gender': ['female', 'male', np.nan, 'female', 'female', 'male'],\n",
+        "    'price': [199.0, 89.0, np.nan, 129.0, 79.0, 89.0],\n",
+        "    'weight': [500, 450, 300, np.nan, 410, np.nan],\n",
+        "    'bought': ['yes', 'no', 'yes', 'no', 'yes', 'no']\n",
+        "}\n",
+        "\n",
+        "df_row1 = pd.DataFrame(data1)\n",
+        "\n",
+        "df = df_row1.copy()\n",
+        "\n",
+        "df.info()\n",
+        "\n",
+        "\n",
+        "\n",
+        "df.isnull().sum() / len(df)\n",
+        "\n",
+        "\n",
+        "\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "imput = SimpleImputer(strategy='mean' ,missing_values= np.nan)\n",
+        "\n",
+        "df['weight'] = imput.fit_transform(df[['weight']])\n",
+        "df\n",
+        "\n",
+        "imputer = SimpleImputer(strategy='most_frequent', missing_values=np.nan)\n",
+        "df['size'] = imputer.fit_transform(df[['size']])\n",
+        "\n",
+        "df"
+      ],
+      "metadata": {
+        "id": "QmvmdxaWBRvB",
+        "outputId": "8c223a22-2233-4296-9799-9d05e68e98b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 463
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 6 entries, 0 to 5\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   size    5 non-null      object \n",
+            " 1   color   6 non-null      object \n",
+            " 2   gender  5 non-null      object \n",
+            " 3   price   5 non-null      float64\n",
+            " 4   weight  4 non-null      float64\n",
+            " 5   bought  6 non-null      object \n",
+            "dtypes: float64(2), object(4)\n",
+            "memory usage: 416.0+ bytes\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  size  color  gender  price  weight bought\n",
+              "0   XL    red  female  199.0   500.0    yes\n",
+              "1    L  green    male   89.0   450.0     no\n",
+              "2    M   blue     NaN    NaN   300.0    yes\n",
+              "3    M  green  female  129.0   415.0     no\n",
+              "4    M    red  female   79.0   410.0    yes\n",
+              "5    M  green    male   89.0   415.0     no"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-ad242e68-eff0-49f6-a56a-922884072c87\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>size</th>\n",
+              "      <th>color</th>\n",
+              "      <th>gender</th>\n",
+              "      <th>price</th>\n",
+              "      <th>weight</th>\n",
+              "      <th>bought</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>XL</td>\n",
+              "      <td>red</td>\n",
+              "      <td>female</td>\n",
+              "      <td>199.0</td>\n",
+              "      <td>500.0</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>L</td>\n",
+              "      <td>green</td>\n",
+              "      <td>male</td>\n",
+              "      <td>89.0</td>\n",
+              "      <td>450.0</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M</td>\n",
+              "      <td>blue</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>300.0</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M</td>\n",
+              "      <td>green</td>\n",
+              "      <td>female</td>\n",
+              "      <td>129.0</td>\n",
+              "      <td>415.0</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M</td>\n",
+              "      <td>red</td>\n",
+              "      <td>female</td>\n",
+              "      <td>79.0</td>\n",
+              "      <td>410.0</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>M</td>\n",
+              "      <td>green</td>\n",
+              "      <td>male</td>\n",
+              "      <td>89.0</td>\n",
+              "      <td>415.0</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad242e68-eff0-49f6-a56a-922884072c87')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-ad242e68-eff0-49f6-a56a-922884072c87 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-ad242e68-eff0-49f6-a56a-922884072c87');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
         }
       ]
     },
