Utworzono za pomocą Colaboratory

--- a/Kopia_notatnika_uczenie_maszynowe.ipynb
+++ b/Kopia_notatnika_uczenie_maszynowe.ipynb
@@ -6,7 +6,7 @@
       "name": "Kopia notatnika uczenie_maszynowe.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORBL9SoSDjTRuHl2Ry31eO",
+      "authorship_tag": "ABX9TyPHB8S+dCb7CX/9QoKNE7Bw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -628,11 +628,11 @@
         "print(X)"
       ],
       "metadata": {
-        "id": "nbUZzCwuMFwU",
-        "outputId": "6d1fbd66-8c35-470b-87f6-31b0abe41f32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nbUZzCwuMFwU",
+        "outputId": "6d1fbd66-8c35-470b-87f6-31b0abe41f32"
       },
       "execution_count": 17,
       "outputs": [
@@ -673,11 +673,11 @@
         "print(regression.coef_)"
       ],
       "metadata": {
-        "id": "tBh-h4-mSbOE",
-        "outputId": "8724f124-3ea1-4c25-87ee-f061bef8b717",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tBh-h4-mSbOE",
+        "outputId": "8724f124-3ea1-4c25-87ee-f061bef8b717"
       },
       "execution_count": 29,
       "outputs": [
@@ -688,6 +688,74 @@
             "2750.0\n",
             "[250.]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_learning = 0.01\n",
+        "\n",
+        "weights = np.random.randn(2,1) #macierz 2 na 1 losowa, unkt startowy\n",
+        "\n",
+        "print(weights)\n"
+      ],
+      "metadata": {
+        "id": "vlHNZrv6Z9vb",
+        "outputId": "2cf05b7f-feee-401c-c332-716137240dce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1.80298463]\n",
+            " [0.04317229]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import sklearn\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "np.random.seed(42)\n",
+        "np.set_printoptions(precision=6, suppress=True, edgeitems=30, linewidth=120, \n",
+        "                    formatter=dict(float=lambda x: f'{x:.2f}'))\n",
+        "sns.set(font_scale=1.3)\n",
+        "sklearn.__version__"
+      ],
+      "metadata": {
+        "id": "UfRVV0X6nMGR",
+        "outputId": "477d9e70-6508-401e-ef97-9bed620fe759",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.0.2'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
         }
       ]
     },
